<resources>
    <string name="app_name">Kue</string>
    <string name="button_label_stats">statistics</string>
    <string name="button_label_cook">cook</string>
    <string name="button_label_settings">settings</string>
    <string name="button_label_cashier">cashier</string>
    <string name="menu">Menu (a lot of food buttons)</string>
    <string name="button">Button</string>
    <string name="a_list_of_orders_and_clickable_done">A list of orders and clickable Done</string>
    <string name="graph_and_diagrams">graph and diagrams</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Name</string>
    <string name="password"> password</string>
    <string name="Login">login</string>
    <string name="cancel">Cancel</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="food_sales">Food Sales</string>
    <string name="customer_traffic">Customer Traffic</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plussign">+</string>
    <string name="minussign">-</string>
    <string name="chicken_rice">ChickenRice</string>
    <string name="display_number">0</string>
    <string name="duck_rice">Duck Rice</string>
    <string name="Satay">Satay</string>
    <string name="total_order">Total Order</string>
    <string name="Totalcost">Total Cost</string>
    <string name="submit">Submit</string>
    <string name="cook_great_food" />
    <string name="hello_there">Hello There!</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_here"><u>sign up here!</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="verify_your_password">verify your password</string>
    <string name="ratings">Ratings</string>
    <string name="restaurant_dashboard">Restaurant Dashboard</string>
    <string name="food_details">Food Details</string>
    <string name="date_and_time_of_order">Date and Time of Order</string>
    <string name="food_s_ready">Food\'s Ready!</string>


</resources>