<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="K U E"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:hint="Username"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f" />

    <Button
        android:id="@+id/button_cash"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/Login" />

</LinearLayout>