<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootlayout"
    tools:context=".RevisedCashierActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainlayout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minussign"
            />

        <TextView
            android:id="@+id/integer_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_number"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plussign"
            android:layout_marginRight="20dp"/> //add space between two views
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="foodname"
            android:layout_marginRight="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>